extract clause
